# tts-orchestration

./: Dockerfile  Dockerfile.worker  README.md  docker-compose.yml  index.html  pyproject.toml  tts_tdd_pseudocode.md
config/: voice_config.json
src/tts_service/: analyzer.py  config.py  main.py  models.py  router.py  synthesizer.py  worker.py
tests/: conftest.py  test_analyzer.py  test_api.py  test_config.py  test_router.py  test_synthesizer.py
